--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.3.3
+Flask-CORS==4.0.0
 python-dotenv==1.0.0
 requests==2.31.0
 pandas==2.1.1
 supabase==1.2.0
 python-decouple==3.8
+urllib3==2.0.7
